--- a/Localization/LocSource.xaml
+++ b/Localization/LocSource.xaml
@@ -2,14 +2,10 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
-    <!-- StoreLocalization -->
-    <sys:String x:Key="LOCLanguageNameEnglish">english</sys:String>
-    <sys:String x:Key="LOCLanguageCode">en_En</sys:String>
-    <sys:String x:Key="LOCLanguageCountry">EN</sys:String>
-
     <!--  
     MainView
     -->
+    <sys:String x:Key="LOCSucessStory">Success Story</sys:String>
     <sys:String x:Key="LOCSucessStoryAchievements">Achievements</sys:String>
 
     <!--  
@@ -23,7 +19,8 @@
     <sys:String x:Key="LOCSucessStoryIncludeHiddenGames">Include hidden games</sys:String>
     <sys:String x:Key="LOCSucessStoryAllUnlockedByMonth">Graphic with all unlocked achievements by month</sys:String>
     <sys:String x:Key="LOCSucessStoryGameUnlockedByMonth">Graphic with game unlocked achievements by month</sys:String>
-    
+
+    <sys:String x:Key="LOCSucessStoryDefaultSorting">Default sorting</sys:String>
     <sys:String x:Key="LOCSucessStoryIsAsc">Ascending</sys:String>
 
     <sys:String x:Key="LOCSucessStoryDatabase">Database manipulation</sys:String>
