--- a/Localization/ru_RU.xaml
+++ b/Localization/ru_RU.xaml
@@ -2,14 +2,10 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
-    <!-- StoreLocalization -->
-    <sys:String x:Key="LOCLanguageNameEnglish">Russian</sys:String>
-    <sys:String x:Key="LOCLanguageCode">ru_Ru</sys:String>
-    <sys:String x:Key="LOCLanguageCountry">RU</sys:String>
-
     <!--  
     MainView
     -->
+    <sys:String x:Key="LOCSucessStory">Достижения</sys:String>
     <sys:String x:Key="LOCSucessStoryAchievements">Достижения</sys:String>
 
     <!--  
@@ -24,6 +20,7 @@
     <sys:String x:Key="LOCSucessStoryAllUnlockedByMonth">Graphic with all unlocked achievements by month</sys:String>
     <sys:String x:Key="LOCSucessStoryGameUnlockedByMonth">Graphic with game unlocked achievements by month</sys:String>
 
+    <sys:String x:Key="LOCSucessStoryDefaultSorting">Default sorting</sys:String>
     <sys:String x:Key="LOCSucessStoryIsAsc">По возрастанию</sys:String>
 
     <sys:String x:Key="LOCSucessStoryDatabase">Манипуляция с базой данных</sys:String>
