--- a/Localization/LocSource.xaml
+++ b/Localization/LocSource.xaml
@@ -12,9 +12,9 @@
     SuccessStorySettingsView
     -->
 
-    <sys:String x:Key="LOCSucessStoryEnableSteam">Enable Steam achievements</sys:String>
-    <sys:String x:Key="LOCSucessStoryEnableGog">Enable GOG achievements</sys:String>
-    <sys:String x:Key="LOCSucessStoryEnableOrigin">Enable Origin achievements</sys:String>
+    <sys:String x:Key="LOCSucessStoryEnableSteam">Enable Steam</sys:String>
+    <sys:String x:Key="LOCSucessStoryEnableGog">Enable GOG</sys:String>
+    <sys:String x:Key="LOCSucessStoryEnableOrigin">Enable Origin</sys:String>
 
     <sys:String x:Key="LOCSucessStoryIncludeHiddenGames">Include hidden games</sys:String>
     <sys:String x:Key="LOCSucessStoryAllUnlockedByMonth">Graphic with all unlocked achievements by month</sys:String>
