--- a/Localization/fr_FR.xaml
+++ b/Localization/fr_FR.xaml
@@ -15,6 +15,7 @@
     <sys:String x:Key="LOCSucessStoryEnableSteam">Activier Steam</sys:String>
     <sys:String x:Key="LOCSucessStoryEnableGog">Activier GOG</sys:String>
     <sys:String x:Key="LOCSucessStoryEnableOrigin">Activier Origin</sys:String>
+    <sys:String x:Key="LOCSucessStoryEnableRetroAchievements">Activier RetroAchievements</sys:String>
 
     <sys:String x:Key="LOCSucessStoryIncludeHiddenGames">Inclure les jeux cachés</sys:String>
     <sys:String x:Key="LOCSucessStoryAllUnlockedByMonth">Graphique avec tous les achievements par mois</sys:String>
